--- a/index.html
+++ b/index.html
@@ -397,6 +397,65 @@
 
     <!-- * Testimonials section end -->
 
+    <!-- * Footer section start -->
+
+    <footer>
+        <div class="container footer__container">
+            <div class="footer__1">
+                <a href="index.html" class="footer__logo">
+                    <h4>EDUCATION</h4>
+                </a>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates praesentium aliquid non?
+                </p>
+            </div>
+
+            <div class="footer__2">
+                <h4>Permalinks</h4>
+                <ul class="permalinks">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="courses.html">Courses</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="footer__3">
+                <h4>Primacy</h4>
+                <ul class="privacy">
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Terms and conditions</a></li>
+                    <li><a href="">Refund Policy</a></li>
+                </ul>
+            </div>
+
+            <div class="footer__4">
+                <h4>Contact Us</h4>
+                <div>
+                    <p>+050 300 17 17</p>
+                    <p>rafet.hasanov17@gmail.com</p>
+                </div>
+                <ul class="footer__socials">
+                    <li><a href=""><i class="uil uil-facebook-f"></i></a></li>
+                    <li><a href=""><i class="uil uil-instagram-alt"></i></a></li>
+                    <li><a href=""><i class="uil uil-twitter"></i></a></li>
+                    <li><a href=""><i class="uil uil-linkedin-alt"></i></a></li>
+                </ul>
+            </div>
+
+           
+
+            
+        </div>
+
+        <div class="footer__copyright">
+            <small>Copyright &copy; Rafet Hasanov</small>
+        </div>
+    </footer>
+
+    <!-- * Footer section end -->
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -411,9 +470,9 @@
                 clickable: true,
             },
             // when window with is >= 600px
-            breakpoints:{
-                600:{
-                    slidesPerView: 2 
+            breakpoints: {
+                600: {
+                    slidesPerView: 2
                 }
             }
         });
