--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,12 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/contact.css">
 
+    <style>
+        body{
+            background-image: url(assets/images/bg-texture.png);
+        }
+    </style>
+
 </head>
 
 <body>
