--- a/courses.html
+++ b/courses.html
@@ -19,7 +19,11 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 
     <style>
-        .courses{
+        body {
+            background-image: url(assets/images/bg-texture.png);
+        }
+
+        .courses {
             margin-top: 1rem;
         }
     </style>
