--- a/about.html
+++ b/about.html
@@ -7,8 +7,7 @@
     <title>Education WebSite</title>
     <!--ICONSCOUT CDN  -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/about.css">
+
 
     <!--  GOOGLE FONTS (MONTSERRAT) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,6 +15,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/about.css">
+
+
+    <style>
+        body {
+            background-image: url(assets/images/bg-texture.png);
+        }
+    </style>
 </head>
 
 <body>
